<resources>
    <string name="app_name">Chat\nBrewery</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="or_login_using_your">or Login using your Phone no.</string>
    <string name="create_an_account">Create An Account</string>
    <string name="already_registered">Already registered?</string>
    <string name="requests">Requests</string>
    <string name="phone_no">Phone No.</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="login_with_email_address">Login with Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="or">Or</string>
    <string name="activate_your_account">Activate your account</string>
    <string name="your_code_will_be_directed_automatically">Your code will be directed automatically</string>
    <string name="resend_code">Resend code</string>
    <string name="_6_digit_code">6-digit code</string>
    <string name="create_group">Create Group</string>
    <string name="please_write_a_message">Please write a message...</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="email_address">Email Address</string>
    <string name="update">Update</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="user_status">User Status</string>
    <string name="hey_i_am_using_chat_app">hey! I am using Chat App.</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
</resources>
