<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.rohan1007aggarwal.chatapp_rohan.ProfileActivity">

    <include
        android:id="@+id/profile_activity_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_activity_toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_image"
        app:civ_border_color="@android:color/holo_blue_dark"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_activity_toolbar" />

    <TextView
        android:id="@+id/visit_profile_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visit_profile_image" />

    <TextView
        android:id="@+id/visit_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_i_am_using_chat_app"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visit_profile_user_name" />

    <Button
        android:id="@+id/send_message_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/send_message"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visit_profile_status" />

    <Button
        android:id="@+id/decline_message_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/cancel_chat_request"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_message_request_button" />
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>