<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_activity_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:civ_border_width="5dp"
        android:layout_marginTop="50dp"
        app:civ_border_color="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_image" />

    <EditText
        android:id="@+id/set_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/username"
        android:textStyle="bold"
        android:drawableStart="@drawable/edit_profile"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/set_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/status"
        android:textStyle="bold"
        android:drawableStart="@drawable/edit_status"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_emailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/set_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textPersonName|textImeMultiLine"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_username" />

    <Button
        android:id="@+id/set_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/update"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="#00BCD4"
        android:textColor="#FFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_status" />

    <Button
        android:id="@+id/verify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/verify_email_address"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="#00BCD4"
        android:textColor="#FFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_update" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>